--- a/css/styles.css
+++ b/css/styles.css
@@ -6,13 +6,18 @@
 	
 }*/
 #mp3_player{ 
-	width:500px; 
+	width:100%; 
 	height:60px; 
 	background:#fff; 
 	margin:0px auto; 
 }
-#mp3_player > div > audio{ padding:10px; width:500px; background:#efe; float:left;  }
-#mp3_player > canvas{ padding:10px 10px 0px 10px; width:500px; height:300px; background:#002D3C; float:left; }
+#mp3_player > div > audio{ padding:10px; width:100%; background:#efe;  }
+#mp3_player > canvas{ 
+	padding:-1px 10px 0px 10px; 
+	width:100%; 
+	height:300px; 
+	/*background:#002D3C; */
+}
 
 div.stats { position: absolute; top:0; right: 0 }
 
