--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,10 @@
-/*AUDIO*/
-/*#mp3_player {
-	position: fixed;
- 	bottom: 0px;
-	opacity: 0.8;
-	
-}*/
 body {
 	font-family: sans-serif;
+}
+
+.wrapper {
+	max-width: 960px;
+	margin: 0 auto;
 }
 
 #mp3_player{ 
@@ -17,14 +15,13 @@ body {
 }
 #mp3_player > div > audio{ padding:10px; width:100%; background:#efe;  }
 #mp3_player > canvas{ 
-	padding:-1px 10px 0px 10px; 
+	padding:0px 10px 0px 10px; 
 	width:100%; 
 	height:300px; 
-	/*background:#002D3C; */
+	background:#efe; 
 }
 
 div.stats { position: absolute; top:0; right: 0 }
-
 
 #list {
 	    width: 350px;
