--- a/css/styles.css
+++ b/css/styles.css
@@ -14,13 +14,17 @@ body {
 	margin:0px auto; 
 }
 #mp3_player > div > audio{ padding:10px; width:100%; background:#efe;  }
-#mp3_player > canvas{ 
+#analyser_render { 
 	padding:0px 10px 0px 10px; 
 	width:100%; 
 	height:300px; 
 	background:#efe; 
 }
 
+/*#webgl canvas {
+	max-width: 960px;
+}
+*/
 div.stats { position: absolute; top:0; right: 0 }
 
 #list {
